force-app/main/default/objects/Transportadora__c/Transportadora__c.object-meta.xml
<CustomObject>
    <label>Transporte</label>
    <nameField>
        <displayFormat>T{0000}</displayFormat>
        <label>Transporte</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transporte</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>