force-app/main/default/objects/Transportadora__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ativo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.Categoria_Patrimonial__c</field>
            <operation>equals</operation>
            <value>VEÍCULOS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Transporte</relationshipLabel>
    <relationshipName>Transporte</relationshipName>
    <type>Lookup</type>
</CustomField>