force-app/main/default/objects/Transportadora__c/fields/Empresas__c.field-meta.xml
<CustomField>
    <fullName>Empresas__c</fullName>
    <label>Empresas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Empresas</valueSetName>
    </valueSet>
</CustomField>