force-app/main/default/objects/Transportadora__c/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <formula>if( Ativo__c  != NULL,  Ativo__r.Name,  Conta_da_Transportadora__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome</label>
    <type>Text</type>
</CustomField>