force-app/main/default/objects/Transportadora__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em aprovação</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
            <value>
                <fullName>Em elaboração</fullName>
            </value>
            <value>
                <fullName>Operante</fullName>
            </value>
            <value>
                <fullName>Inoperante</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
                <isActive>false</isActive>
                <label>Aprovado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>