force-app/main/default/objects/Transportadora__c/fields/Tipo_de_transporte__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_transporte__c</fullName>
    <label>Tipo de transporte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veículo Hospcom</fullName>
            </value>
            <value>
                <fullName>Transportadora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>