force-app/main/default/objects/Transportadora__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Nome__c</columns>
    <columns>Tipo_de_transporte__c</columns>
    <columns>Ativo__c</columns>
    <columns>Status__c</columns>
    <columns>Conta_da_Transportadora__c</columns>
    <columns>Empresas__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>